src/pipeline/snapshots/calc__pipeline__parser__tests__1-tuple trailing.snap
---
source: src/pipeline/parser.rs
expression: "parse(\"a = (1,);\").raw_ast"
---
Ast {
    stmts: [
        [1:1-9] Assign {
            name: [1:1-1] "a",
            value: [1:5-8] Tuple(
                [
                    [1:6-6] Integer(
                        1,
                    ),
                ],
            ),
        },
    ],
}
